--- a/style/style.css
+++ b/style/style.css
@@ -300,7 +300,6 @@ tbody tr:hover {
     background-color: rgba(13,119,182,.3);
 }
 
-
 .ac-container{
 	width: 300px;
 	margin-top: 10px;
@@ -332,11 +331,8 @@ tbody tr:hover {
 		1px 0px 0px 0px rgba(255,255,255,0.9) inset, 
 		0px 2px 2px rgba(0,0,0,0.1);
 }
-.ac-container label:hover{
-	background: #fff;
-}
-.ac-container input:checked + label,
-.ac-container input:checked + label:hover{
+
+.ac-container label.ac-open{
 	background: #c6e1ec;
 	color: #3d7489;
 	text-shadow: 0px 1px 1px rgba(255,255,255, 0.6);
@@ -344,22 +340,7 @@ tbody tr:hover {
 		0px 0px 0px 1px rgba(155,155,155,0.3), 
 		0px 2px 2px rgba(0,0,0,0.1);
 }
-.ac-container label:hover:after,
-.ac-container input:checked + label:hover:after{
-	content: '';
-	position: absolute;
-	width: 24px;
-	height: 24px;
-	right: 13px;
-	top: 7px;
-	background: transparent url(../images/arrow_down.png) no-repeat center center;	
-}
-.ac-container input:checked + label:hover:after{
-	background-image: url(../images/arrow_up.png);
-}
-.ac-container input{
-	display: none;
-}
+
 .ac-container article{
 	background: rgba(255, 255, 255, 0.5);
 	margin-top: -1px;
@@ -381,7 +362,7 @@ tbody tr:hover {
 	padding: 20px;
 	text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
 }
-.ac-container input:checked ~ article{
+.ac-container label.ac-open ~ article{
 	-webkit-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
 	-moz-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
 	-o-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
@@ -389,14 +370,14 @@ tbody tr:hover {
 	transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
 	box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
 }
-.ac-container input:checked ~ article.ac-small{
+.ac-container label.ac-openr ~ article.ac-small{
 	height: 140px;
 }
 
-.ac-container input:checked ~ article.ac-medium{
+.ac-container label.ac-open ~ article.ac-medium{
 	height: 180px;
 }
-.ac-container input:checked ~ article.ac-large{
+.ac-container label.ac-open ~ article.ac-large{
 	height: 500px;
 }
 
