--- a/style/style.css
+++ b/style/style.css
@@ -273,7 +273,7 @@ html,body{
 }
 
 table {
-	padding-top: 40px;'
+	padding-top: 40px;
     border-collapse: collapse;
     margin-bottom: 3em;
     width: 350px;
@@ -370,7 +370,7 @@ tbody tr:hover {
 	transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
 	box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
 }
-.ac-container label.ac-openr ~ article.ac-small{
+.ac-container label.ac-open ~ article.ac-small{
 	height: 140px;
 }
 
