--- a/style/style.css
+++ b/style/style.css
@@ -161,7 +161,7 @@ html,body{
 	width: 275px;
 	background: transparent;
 	border: 3px solid #0d77b6;
-	text-align: right;
+	text-align: left;
 }
 
 
