--- a/style/style.css
+++ b/style/style.css
@@ -7,36 +7,37 @@ html,body{
 	color: #0d77b6;
 }
 
-#container
-{
-	width: 350px;
-	height: 100%;
-}
-
 #Queries
 {
-	width: 350px;
-	position: relative;
+	width: 100%;
+	position: absolute;
 	top: 60px;
-	float: left;
+	left: 0;
+	bottom: 48px;
+	z-index: 1;
+	overflow: hidden;
 }
 
 #Docs
 {
-	width: 350px;
-	position: relative;
+	width: 100%;
+	position: absolute;
 	top: 60px;
-	float: left;
+	left: 0;
+	bottom: 48px;
+	z-index: 1;
+	overflow: hidden;
 }
 
 .dl-menuwrapper {
 	background: #0d77b6;
-	width: 350px;
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	width: 100%;
 	height: 52.5px;
-	float: left;
-	position: fixed;
 	padding-top: 7.5px;
-	z-index: 1000;
 }
 
 .dl-menuwrapper a {
@@ -105,10 +106,8 @@ html,body{
 }
 
 .cbp-spmenu-vertical {
-	width: 350px;
-	height: 100%;
+	width: 100%;
 	top: 60px;
-	z-index: 1000;
 }
 
 .cbp-spmenu-vertical a {
@@ -132,7 +131,7 @@ html,body{
 
 .cbp-mc-column {
 	width: 300px;
-	padding: 10px 25px;
+	padding-top: 10px;
 	float: left;
 }
 
@@ -143,6 +142,7 @@ html,body{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: right;
+	margin-left: 15px;
 }
 
 .cbp-mc-form input {
@@ -156,6 +156,7 @@ html,body{
 	background: transparent;
 	border: 3px solid #0d77b6;
 	text-align: left;
+	margin-left: 15px;
 }
 
 
@@ -175,6 +176,7 @@ html,body{
 	width: 300px;
 	background: transparent;
 	border: 3px solid #0d77b6;
+	margin-left: 15px;
 }
 
 .cbp-mc-form select:focus {
@@ -183,7 +185,8 @@ html,body{
 
 .cbp-mc-form button {
 	display: block;
-	margin-left: 50px;
+	margin-left: 35px;
+	margin-top: 20px;
 	padding: 0;
 	width: 100px;
 	height: 70px;
@@ -251,8 +254,9 @@ tbody tr:hover {
 
 .ac-container{
 	width: 300px;
-	margin-top: 10px;
-	margin-left: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
 	text-align: left;
 }
 .ac-container label{
@@ -499,4 +503,14 @@ tbody tr:hover {
     79.9% { opacity: 0.60; }
     84.2% { opacity: 0.75; }
     91.0% { opacity: 0.87; }
+}
+
+#footer {
+position: absolute;
+z-index: 2;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 48px;
+background: #0d77b6;
 }
